# HelloVcpkg

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  Generate.bat  LICENSE.md  README.md  vcpkg.json
CMake/: Vcpkg.cmake
Source/: Main.cpp
